k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: videostream
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    cert-manager.io/cluster-issuer: "homelab-ca-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - videostream.lan
    secretName: videostream-tls
  rules:
  - host: videostream.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: videostream
            port:
              number: 80
